# kaos-office

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: build.yml  ci.yml  quality.yml  release.yml  security-light.yml  security.yml  test.yml
docs/: BENCHMARKS.md  TRACKED_CHANGES_DESIGN.md  XLSX_NATIVE_READER_DESIGN.md
docs/standards/: code-quality-standards.md  engineering-process.md  python-design-and-architecture.md  tests-fixtures-ci.md
kaos_office/: __init__.py  __main__.py  _path_resolver.py  cli.py  errors.py  serve.py  tools.py
kaos_office/docx/: __init__.py  metadata.py  numbering.py  reader.py  styles.py  writer.py
kaos_office/docx/numbering/: __init__.py  definitions.py  formatters.py  parser.py  resolver.py  state.py
kaos_office/ooxml/: __init__.py  namespace.py
kaos_office/opc/: __init__.py  content_types.py  package.py  relationships.py  security.py
kaos_office/pptx/: __init__.py  reader.py  smartart.py  writer.py
kaos_office/xlsx/: __init__.py  _xlsxwriter_reference.py  calamine_reader.py  cell_ref.py  native.py  reader.py  shared_strings.py  styles.py  writer.py
tests/: benchmark_comparison.py  benchmark_competitors.py  benchmark_real_comparison.py  conftest.py  generate_battle_test_pptx.py
tests/fixtures/docx/: 1444711772592.docx  Burnout_Intervention_Planning_Guide_Fillable_Form_1.docx  CheeseSample.docx  Footnote-Edit.docx  Footnote.docx  Footnote_with_comment.docx  Letter of Commitment for Packaged Furniture Program.docx  MCSRedline10312022.docx  MultiParagraphSample.docx  PolicyProcedureTemplate_PhysicalFacility_Final.docx  README.md  Toro 2022 Term Loan - Comments.docx  Toro 2022 Term Loan - Redline v1.docx  Toro 2022 Term Loan.docx  bcfp_consumer-rights-summary_2018-09.docx  cms-10704-hra-model-notice.docx  mutual-to-stock-application-for-conversion.docx  p2021-203386.docx  right-to-use-leases-with-operating-budget-treatment-with-cancellation-clause.docx
tests/fixtures/docx/numbering/: generate.py  numbering_legal_outline.docx  numbering_legal_outline.expected.md  numbering_nda_governing_law.docx  numbering_nda_governing_law.expected.md  numbering_simple.docx  numbering_simple.expected.md
tests/fixtures/pptx/: Hello-World.pptx  IEO2021_ChartLibrary_Industrial.pptx  LICENSE-FIXTURES.md  README.md  Status report.pptx  Testimony-Mulvey-2013-03-22.pptx
tests/fixtures/pptx/battle/: 50-slides.pptx  README.md  bullets.pptx  charts.pptx  edge-cases.pptx  images.pptx  metadata.pptx  mixed-content.pptx  notes.pptx  rich-text.pptx  spatial-ordering.pptx  tables.pptx
tests/fixtures/pptx/stress/: README.md
tests/fixtures/xlsx/: CBS-BNSF-2015-Q4.xlsx  README.md  payment-report-07-01-20-thru-07-15-20.xlsx  ppplf-transaction-specific-disclosures-07-13-21.xlsx
tests/integration/: test_battle_pptx.py  test_live_verification.py  test_mcp_office_pipeline.py  test_mcp_xlsx_pipeline.py  test_real_docx.py  test_real_pptx.py
tests/unit/: test_api_naming.py  test_cli.py  test_docx_numbering_fixtures.py  test_docx_numbering_integration.py  test_docx_numbering_roundtrip.py  test_docx_phase3.py  test_docx_phase4.py  test_docx_phase4b_gating.py  test_docx_phase4b_images.py  test_docx_phase4c_reader.py  test_docx_phase4c_roundtrip.py  test_docx_phase6_sdt.py  test_docx_revision_writer.py  test_docx_revisions.py  test_docx_writer.py  test_image_dimensions.py  test_numbering.py  test_numbering_extensions.py  test_numbering_formatters.py  test_numbering_state.py  test_opc.py  test_pptx_cli.py  test_pptx_namespace.py  test_pptx_phase2.py  test_pptx_phase6_overflow.py  test_pptx_reader.py  test_pptx_tools.py  test_pptx_writer.py  test_reader.py  test_smartart.py  test_styles.py  test_tools.py  test_vfs_path_resolution.py  test_write_cli.py  test_writer_tools.py  test_xlsx_reader.py  test_xlsx_writer.py
