[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kaos-office"
dynamic = ["version"]
description = "Office document extraction for KAOS — DOCX, XLSX, PPTX to structured AST with provenance"
readme = "README.md"
requires-python = ">=3.13"
license = { text = "LicenseRef-Proprietary" }
authors = [
  { name = "273 Ventures LLC", email = "it@273ventures.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "kaos-content[markdown]>=0.1.0",
  "kaos-core>=0.1.0",
  "lxml>=5.0",
]

[project.scripts]
kaos-office = "kaos_office.cli:main"
kaos-office-serve = "kaos_office.serve:main"

[project.optional-dependencies]
mcp = ["kaos-mcp>=0.1.0"]
nlp = ["kaos-nlp-core>=0.1.0"]
pptx = [
    "python-pptx>=1.0",
]
# Aggregate extra — covers the calamine fast path + openpyxl formula
# extraction. The default native lxml reader needs neither.
xlsx = [
    "python-calamine>=0.6",
    "openpyxl>=3.1",
]
xlsx-calamine = [
    "python-calamine>=0.6",
]
xlsx-formulas = [
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
  "kaos-mcp>=0.1.0",
  "kaos-nlp-core>=0.1.0",
  "kaos-pdf>=0.1.0",
  "python-pptx>=1.0",
  "python-calamine>=0.6",
  "xlsxwriter>=3.2",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "ty>=0.0.1a17",
]

[project.urls]
Homepage = "https://273ventures.com"
Documentation = "https://docs.273ventures.com"
Repository = "https://github.com/273v/kaos-modules"

[tool.hatch.version]
path = "kaos_office/_version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/kaos_office",
  "/README.md",
  "/CLAUDE.md",
  "/docs",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["kaos_office"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=kaos_office",
  "--cov-branch",
  "--cov-report=term-missing",
]
markers = [
  "integration: end-to-end behavior checks",
  "unit: focused unit checks",
]

[tool.coverage.run]
source = ["kaos_office"]
branch = true
omit = [
  "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_office"]

[tool.ty.src]
include = ["kaos_office", "tests"]

[tool.uv]
package = true

[tool.uv.sources]
kaos-content = { path = "../kaos-content", editable = true }
kaos-core = { path = "../kaos-core", editable = true }
kaos-mcp = { path = "../kaos-mcp", editable = true }
kaos-nlp-core = { path = "../kaos-nlp-core", editable = true }
kaos-pdf = { path = "../kaos-pdf", editable = true }
