[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kaos-office"
dynamic = ["version"]
description = "Office document extraction for KAOS — DOCX, XLSX, PPTX to structured AST with provenance"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "273 Ventures LLC", email = "it@273ventures.com" },
]
maintainers = [
  { name = "Michael Bommarito", email = "mike@273ventures.com" },
]
keywords = [
  "office",
  "docx",
  "pptx",
  "xlsx",
  "ooxml",
  "extraction",
  "kaos",
  "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Office/Business",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
  "Typing :: Typed",
]
dependencies = [
  "kaos-content[markdown]>=0.1.0a1,<0.2",
  "kaos-core>=0.1.0a1,<0.2",
  "lxml>=5.0",
]

[project.scripts]
kaos-office = "kaos_office.cli:main"
kaos-office-serve = "kaos_office.serve:main"

# In the monorepo workspace these extras resolve through
# `[tool.uv.sources]` below to the editable sibling source. The
# per-module `273v/kaos-office` repo strips the `[mcp]` extra at
# 0.1.0a1 because `kaos-mcp` isn't on PyPI yet (uv lock is strict and
# refuses to resolve any declared extra whose package is not
# resolvable). `[mcp]` will return once `kaos-mcp` ships on PyPI.
# See docs/oss/checklists/per-package-release.md (F009 #4).
[project.optional-dependencies]
mcp = ["kaos-mcp>=0.1.0"]
nlp = ["kaos-nlp-core>=0.1.0a2,<0.2"]
pptx = [
    "python-pptx>=1.0",
]
# Aggregate extra — covers the calamine fast path + openpyxl formula
# extraction. The default native lxml reader needs neither.
xlsx = [
    "python-calamine>=0.6",
    "openpyxl>=3.1",
]
xlsx-calamine = [
    "python-calamine>=0.6",
]
xlsx-formulas = [
    "openpyxl>=3.1",
]

[dependency-groups]
dev = [
  "kaos-mcp>=0.1.0",
  "kaos-nlp-core>=0.1.0",
  "kaos-pdf>=0.1.0",
  "python-pptx>=1.0",
  "python-calamine>=0.6",
  "xlsxwriter>=3.2",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.11.0",
  "ty>=0.0.1a17",
]

[project.urls]
Homepage = "https://kelvin.legal"
Documentation = "https://docs.kelvin.legal"
Repository = "https://github.com/273v/kaos-office"
Issues = "https://github.com/273v/kaos-office/issues"
Changelog = "https://github.com/273v/kaos-office/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "kaos_office/_version.py"

[tool.hatch.build.targets.sdist]
# Sdist intentionally excludes /tests, /docs, and /CLAUDE.md.
# Test fixtures total >5 MB and aren't useful to PyPI consumers;
# tests/integration requires a runtime context; CLAUDE.md references
# monorepo-only docs. Source code, license, changelog, and packaging
# metadata are enough for source-build verification on PyPI.
include = [
  "/kaos_office",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/NOTICE",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["kaos_office"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=kaos_office",
  "--cov-branch",
  "--cov-report=term-missing",
]
markers = [
  "integration: end-to-end behavior checks",
  "unit: focused unit checks",
]

[tool.coverage.run]
source = ["kaos_office"]
branch = true
omit = [
  "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_office"]

[tool.ty.src]
include = ["kaos_office", "tests"]

[tool.uv]
package = true

[tool.uv.sources]
kaos-content = { path = "../kaos-content", editable = true }
kaos-core = { path = "../kaos-core", editable = true }
kaos-mcp = { path = "../kaos-mcp", editable = true }
kaos-nlp-core = { path = "../kaos-nlp-core", editable = true }
kaos-pdf = { path = "../kaos-pdf", editable = true }
