[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "kaos-office"
dynamic = ["version"]
description = "Office document extraction for KAOS — DOCX, XLSX, PPTX to structured AST with provenance"
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "273 Ventures LLC", email = "it@273ventures.com" },
]
maintainers = [
  { name = "Michael Bommarito", email = "mike@273ventures.com" },
]
keywords = [
  "office",
  "docx",
  "pptx",
  "xlsx",
  "ooxml",
  "extraction",
  "kaos",
  "mcp",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Office/Business",
  "Topic :: Office/Business :: Office Suites",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing",
  "Typing :: Typed",
]
dependencies = [
  "kaos-content[markdown]>=0.1.0a11,<0.2",
  "kaos-core>=0.1.0a10,<0.2",
  # lxml 5.3 (2024-10) is the first release shipping cpython-3.13
  # wheels; older minor versions need libxml2 / libxslt source builds
  # on 3.13. Bumping the declared minimum keeps the min-deps CI gate
  # honest. lxml 6.x is what the highest-resolution lock pulls.
  "lxml>=5.3",
]

[project.scripts]
kaos-office = "kaos_office.cli:main"
kaos-office-serve = "kaos_office.serve:main"

# [mcp] extra restored at 0.1.0a3 — kaos-mcp is on PyPI as of 0.1.0a3.
# (The 0.1.0a1 release intentionally omitted the extra because uv lock
# refuses to resolve any declared extra whose package isn't on PyPI yet;
# F009 #4. Now resolvable.)
[project.optional-dependencies]
mcp = ["kaos-mcp>=0.1.0a3,<0.2"]
nlp = ["kaos-nlp-core>=0.1.0a2,<0.2"]
pptx = [
    "python-pptx>=1.0",
]
# Aggregate extra — covers the calamine fast path + openpyxl formula
# extraction. The default native lxml reader needs neither.
xlsx = [
    "python-calamine>=0.6",
    "openpyxl>=3.1",
]
xlsx-calamine = [
    "python-calamine>=0.6",
]
xlsx-formulas = [
    "openpyxl>=3.1",
]

[dependency-groups]
# Sibling deps that aren't yet on PyPI (kaos-mcp, kaos-pdf cross-validator
# tests) are stripped here at 0.1.0a1 — re-add at 0.1.0a2 once they ship.
# kaos-nlp-core is on PyPI so it stays for the [nlp]-extra integration tests.
dev = [
  "kaos-nlp-core>=0.1.0a2,<0.2",
  "python-pptx>=1.0",
  "python-calamine>=0.6",
  "openpyxl>=3.1",
  "xlsxwriter>=3.2",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.26.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.15.12",
  "ty>=0.0.34,<0.1",
]

[project.urls]
Homepage = "https://kelvin.legal"
Documentation = "https://docs.kelvin.legal"
Repository = "https://github.com/273v/kaos-office"
Issues = "https://github.com/273v/kaos-office/issues"
Changelog = "https://github.com/273v/kaos-office/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "kaos_office/_version.py"

[tool.hatch.build.targets.sdist]
# Sdist intentionally excludes /tests, /docs, and /CLAUDE.md.
# Test fixtures total >5 MB and aren't useful to PyPI consumers;
# tests/integration requires a runtime context; CLAUDE.md references
# monorepo-only docs. Source code, license, changelog, and packaging
# metadata are enough for source-build verification on PyPI.
include = [
  "/kaos_office",
  "/README.md",
  "/CHANGELOG.md",
  "/LICENSE",
  "/NOTICE",
  "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["kaos_office"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--cov=kaos_office",
  "--cov-branch",
  "--cov-report=term-missing",
]
markers = [
  "integration: end-to-end behavior checks",
  "unit: focused unit checks",
]

[tool.coverage.run]
source = ["kaos_office"]
branch = true
omit = [
  "*/tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "@abstractmethod",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF", "C4", "PTH"]

[tool.ruff.lint.isort]
known-first-party = ["kaos_office"]

[tool.ty.src]
include = ["kaos_office", "tests"]
# Test + benchmark files that import siblings stripped from the
# per-module repo's 0.1.0a1 release because the underlying packages
# aren't on PyPI yet, plus benchmark scripts that import optional
# third-party tools (mammoth, markitdown, docling) for head-to-head
# comparisons. Runtime imports are gated behind import-error catches
# or pytest.importorskip; ty resolves modules statically and would
# otherwise emit unresolved-import errors. Re-include the
# integration/test_mcp_*_pipeline.py and test_live_verification.py
# files once kaos-mcp / kaos-pdf ship and the [mcp] extra returns at
# 0.1.0a2.
exclude = [
  "tests/benchmark_comparison.py",
  "tests/benchmark_real_comparison.py",
  "tests/integration/test_live_verification.py",
  "tests/integration/test_mcp_office_pipeline.py",
  "tests/integration/test_mcp_xlsx_pipeline.py",
]

[tool.uv]
package = true
exclude-newer = "72 hours"

[tool.uv.exclude-newer-package]
"kaos-citations" = false
"kaos-content" = false
"kaos-core" = false
"kaos-graph" = false
"kaos-llm-client" = false
"kaos-llm-core" = false
"kaos-mcp" = false
"kaos-ml-core" = false
"kaos-names" = false
"kaos-nlp-core" = false
"kaos-nlp-transformers" = false
"kaos-office" = false
"kaos-pdf" = false
"kaos-source" = false
"kaos-tabular" = false
"kaos-web" = false
